major update + stopped activity auto

--- a/templates/back/blog_admin/blog_form.html.twig
+++ b/templates/back/blog_admin/blog_form.html.twig
@@ -23,6 +23,10 @@
         <div class="mb-3">
             {{ form_row(form.category)}}
         </div>
+
+        <div class="mb-3">
+            {{ form_row(form.status)}}
+        </div>
     </div>
 
     <!-- Sections dynamiques -->
