--- a/templates/front/includes/project.html.twig
+++ b/templates/front/includes/project.html.twig
@@ -3,7 +3,7 @@
 		<div class="col-xs-12 col-sm-12">
 			<!-- Portfolio Content -->
 			<div id="portfolio_content_q" class="portfolio-content">
-				<ul class="portfolio-filters">
+				{# <ul class="portfolio-filters">
 					<li>
 						<a class="filter btn btn-sm btn-link" data-group="toutes_categories">Toutes les catégories</a>
 					</li>
@@ -16,7 +16,7 @@
 					<li>
 						<a class="filter btn btn-sm btn-link" data-group="prototype">Prototype</a>
 					</li>
-				</ul>
+				</ul> #}
 
 				<!-- Portfolio Grid -->
 				<div class="portfolio-grid four-columns shuffle">
